WIP error handling data access layer, service layer, controller etc.
