# src/routes/index.ts
@@ -8,6 +8,7 @@ router.post("/scan", playerAction.scan);
 router.get("/debug", debug.showRecent);
 
 // Users routes
+router.get("/users/:uuid", user.getUser);
 router.post("/users/add", user.add);
 router.get("/users/:uuid/inventory", user.getUserInventory);
 
